Bugfix: task input form now fully visible on tablet view.

--- a/scss/partials/_form.scss
+++ b/scss/partials/_form.scss
@@ -179,6 +179,14 @@
     display: none;
   }
 
+  @media (min-width: 768px) {
+    height: 80vh;
+    #taskDescription {
+      &::placeholder{
+        line-height: 20vh;
+      }
+    }
+  }
   @media (min-width: 1024px) {
     height: 45vh;
     position: static;
